Forking Skoda´s repositary

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Visualisation</title>
   </head>
   <body>
+    <!-- supposably in client/index.js -->
     <div id="app"></div>
   </body>
 </html>
